2011-04-05 Gregory L. Lee <lee218@llnl.gov>
	* src/Makefile.am : added -Wl,-E to LDFLAGS
	* : code clean up

2011-04-01 Gregory L. Lee <lee218@llnl.gov>
	* : Updated documentation screenshots

2011-03-29 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : Renamed STAT's pack funtion to avoid collisions
	* scripts/STATGUI.py : Improved handling of application exit on sample multiple

2011-03-28 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_BackEnd.C : moved StackWalker exit check (mistakenly put in if handleDebugEvent == false branch)
	* src/STAT_FrontEnd.C : check LMON state in detach ack

2011-03-09 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py : added some ability to handle edge labels with just count + 1 representative

2011-02-28 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : added STAT_LMON_DEBUG_BES env var
	* scripts/STATGUI.py : advanced option in GUI to enable LMON_DEBUG_BES

2011-02-18 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : fix remap tree calculation for STATBench.  Needed snapshot of MRNet topology before BEs connect
	* src/STAT_BackEnd.C : STATBench needs to include parent rank in connection info passed via fifo

2011-02-03 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : don't set member variables to getenv(...), instead do a strdup, otherwise it will seg fault when freeing the member var.

2011-02-01 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py : new feature to reset the layout based on the current visible graph (i.e., save current .dot file and open in new tab)

2011-01-21 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C, src/STAT_BackEnd.C : use strerror within pringMsg instead of perror
	* scripts/STATview.py : resize text view Window instead of TextView + set_default_size to allow shrinking below default size.

2011-01-21 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : fixed flat topology specification when no nodes specified