@@ -1,3 +1,7 @@
+2011-04-11 Gregory L. Lee <lee218@llnl.gov>
+	* scripts/STATGUI.py : added "DDT LaunchMON Prefix" option + improved handling of DDT launching
+	* scripts/STATview.py : while gtk.events_pending() -> if gtk.events_pending() b/c of hang on jaguar
+
 2011-04-05 Gregory L. Lee <lee218@llnl.gov>
 	* src/Makefile.am : added -Wl,-E to LDFLAGS
 	* : code clean up
